update client kyc
